add_library(AbstractFactoryPatternExample AbstractFactoryPatternExample.cpp AbstractFactoryPatternExample.h)

add_executable(ExampleCPPProject01 main.cpp)
target_link_libraries(ExampleCPPProject01 AbstractFactoryPatternExample)

set_property(TARGET AbstractFactoryPatternExample PROPERTY CXX_STANDARD 17)
set_property(TARGET ExampleCPPProject01 PROPERTY CXX_STANDARD 17)
